--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,3 +9,4 @@
 @import url(../components/Message/style.css);
 @import url(../components/Select/style.css);
 @import url(../components/Form/style.css);
+@import url(../components/Switch/style.css);
